Made it so that GUI only reflects bonuses in config + fixed bug with max health not updating

--- a/Starvation/SimpleStarvation/assets/starvation/lang/en.json
+++ b/Starvation/SimpleStarvation/assets/starvation/lang/en.json
@@ -4,7 +4,7 @@
     "MaxHealth": "Max Health",
     "MeleeDamage": "Melee Damage",
     "RangedDamage": "Ranged Damage",
-    "HealingEffectiveness": "Walk Speed",
+    "HealingEffectiveness": "Time to heal ",
     "HungerRate": "Hunger Rate",
     "RangeWeaponAccuracy": "Ranged Accuracy",
     "RangedWeaponsSpeed": "Projectile Speed",
