Added translation for gui title bar

--- a/Starvation/SimpleStarvation/assets/starvation/lang/en.json
+++ b/Starvation/SimpleStarvation/assets/starvation/lang/en.json
@@ -16,5 +16,6 @@
     "JumpHeightMul": "Jump Height",
     "Nutrition": "Nutrition",
     "Weight" : "Weight",
-    "Bonuses": "Bonuses"
+    "Bonuses": "Bonuses",
+    "weight-title": "Weight Stats"
 }
