Added units to translation and add configuration for applying fatal damage at critical weight

--- a/Starvation/SimpleStarvation/assets/starvation/lang/en.json
+++ b/Starvation/SimpleStarvation/assets/starvation/lang/en.json
@@ -17,5 +17,6 @@
     "Nutrition": "Nutrition",
     "Weight" : "Weight",
     "Bonuses": "Bonuses",
-    "weight-title": "Weight Stats"
+    "weight-title": "Weight Stats",
+    "Units": "kg"
 }
