Added average weight gain on gui, fixed some bugs with config and updated some defaults

--- a/Starvation/SimpleStarvation/assets/starvation/lang/en.json
+++ b/Starvation/SimpleStarvation/assets/starvation/lang/en.json
@@ -18,5 +18,6 @@
     "Weight" : "Weight",
     "Bonuses": "Bonuses",
     "weight-title": "Weight Stats",
-    "Units": "kg"
+    "Units": "kg",
+    "AverageGain": "Average Gain"
 }
